--- a/index .html
+++ b/index .html
@@ -17,7 +17,7 @@
     </header>
 
     <div class="texto">
-        <p>
+        <p class="principal">
             <h1>Este mes queria hacer algo diferente y esta fue la mejor manera que encontre.</h1>
             Vos ya sabes lo mucho que te amo y te adoro, sos el amor de mi vida y siempre lo vas a ser y se que no se que va a pasar en un 
             futuro pero quiero que estes toda mi vida junto a mi.<br>
@@ -34,10 +34,15 @@
             Y por ultimo mi vida, te amo muchisimo, nunca dudes de eso. Te adoro y siempre voy a estar para escucharte, bancarte y apoyarte
             en todo lo que hagas. Siempre voy a estar si queres charlar de algo, nunca me jodes con nada, hasta el detalle mas minimo me importa
             y lo voy a escuchar siempre, no importa si es que comiste, me importa y siempre los voy a tratar de acordarmelos.
+            <p style="text-align:center;">
+            Te dejo una cancion que te dedico amor.<br> 
+            <a href="https://www.youtube.com/watch?v=rxbQEWEGDCU" style="text-decoration: none;">cancion</a>
+            </p>
         </p>
     </div>
     <footer>
-        <p>Espero que te haya gustado y la idea es ir agregando cosas como las fotos y eso.</p>
+        <p>Espero que te haya gustado y la idea es ir agregando cosas como las fotos y eso. 
+        </p>
     </footer>
 </body>
 </html>
